--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -289,3 +289,98 @@ videogular vg-overlay-play, [videogular] vg-overlay-play {
   white-space: normal !important;
   overflow: auto; }
 
+.chat-area {
+  position: fixed;
+  bottom: 0;
+  right: 3px;
+  z-index: 10; }
+  .chat-area .chat-switcher a {
+    display: block;
+    padding: 5px 40px;
+    background-color: #ccc;
+    border: solid 1px #bbb;
+    color: #555; }
+    .chat-area .chat-switcher a:hover, .chat-area .chat-switcher a:active {
+      color: #555; }
+  .chat-area .chat-box {
+    display: none;
+    position: absolute;
+    bottom: 32px;
+    right: 0;
+    min-width: 200px; }
+    .chat-area .chat-box .friend-list ul {
+      padding: 0;
+      margin: 0; }
+      .chat-area .chat-box .friend-list ul li {
+        list-style: none;
+        border-bottom: dotted 1px #ccc; }
+        .chat-area .chat-box .friend-list ul li a {
+          display: block;
+          padding: 5px 5px;
+          height: 45px; }
+    .chat-area .chat-box .chat-box-section-friend-list {
+      float: left;
+      width: 25%;
+      height: 400px; }
+      .chat-area .chat-box .chat-box-section-friend-list a.active {
+        background-color: #eee; }
+    .chat-area .chat-box .chat-box-section-chat-scroll {
+      float: left;
+      width: 75%;
+      height: 400px; }
+    .chat-area .chat-box .chat-scroll .conversation {
+      height: 360px;
+      overflow: auto;
+      padding: 10px 0; }
+      .chat-area .chat-box .chat-scroll .conversation ul {
+        padding: 0;
+        margin: 0; }
+        .chat-area .chat-box .chat-scroll .conversation ul li {
+          padding: 1px 0px;
+          list-style-type: none; }
+          .chat-area .chat-box .chat-scroll .conversation ul li .reply {
+            padding: 5px 10px;
+            margin-right: 45px;
+            border-radius: 5px; }
+            .chat-area .chat-box .chat-scroll .conversation ul li .reply.my-reply {
+              background-color: #ecf0f5;
+              margin-left: 45px;
+              margin-right: 0; }
+              .chat-area .chat-box .chat-scroll .conversation ul li .reply.my-reply .reply-status {
+                font-size: 8px;
+                text-align: right; }
+                .chat-area .chat-box .chat-scroll .conversation ul li .reply.my-reply .reply-status .sent {
+                  color: gray; }
+                .chat-area .chat-box .chat-scroll .conversation ul li .reply.my-reply .reply-status .received {
+                  color: blue; }
+                .chat-area .chat-box .chat-scroll .conversation ul li .reply.my-reply .reply-status .read {
+                  color: green; }
+      .chat-area .chat-box .chat-scroll .conversation .load-more {
+        text-align: center;
+        border: dashed 1px #999;
+        padding: 5px 0;
+        margin: 15px; }
+        .chat-area .chat-box .chat-scroll .conversation .load-more a {
+          color: #555; }
+      .chat-area .chat-box .chat-scroll .conversation .typing-notify {
+        font-size: 13px;
+        color: gray;
+        margin-left: 47px;
+        padding: 5px 0;
+        font-style: italic; }
+  .chat-area.expanded .chat-box {
+    display: block;
+    width: 800px;
+    height: 400px;
+    background-color: white;
+    border: solid 1px #ccc;
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5); }
+    .chat-area.expanded .chat-box .friend-list {
+      border-right: solid 1px #ccc;
+      height: 400px;
+      overflow: auto; }
+  .chat-area .submission-area {
+    padding: 10px 10px;
+    background-color: #eee;
+    margin-top: 6px; }
+
