--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
@@ -148,10 +148,10 @@
             <div class="chat-box-section-friend-list">
                 <div class="friend-list" block-ui>
                     <ul>
-                        <li ng-repeat="friend in CurrentUser.Friends">
-                            <a ng-click="Chat.chatWith(friend.Id)" ng-class="{'active': Chat.isActiveChat(friend.Id)}" onclick="focusToInput()">
-                                <img class="img-sm img-circle margin-r-5" ng-src="{{friend.ProfileImageUrl}}" />
-                                <span>{{friend.Name}}</span>
+                        <li ng-repeat="chat in Chat.openChats">
+                            <a ng-click="Chat.chatWith(chat.receiver.Id, attachReadScroller())" ng-class="{'active': Chat.isActiveChat(chat.receiver.Id)}" onclick="focusToInput()">
+                                <img class="img-sm img-circle margin-r-5" ng-src="{{chat.receiver.ProfileImageUrl}}"/>
+                                <span>{{chat.receiver.Name}}</span>
                             </a>
                         </li>
                     </ul>
@@ -167,7 +167,7 @@
                             <li ng-repeat="reply in Chat.activeChat.conversation.ConversationReplies">
                                 <div class="reply" ng-class="{'my-reply': reply.UserId == CurrentUser.Id}">
                                     <a ng-if="reply.UserId != CurrentUser.Id">
-                                        <img class="img-sm img-circle margin-r-5" ng-src="{{Chat.activeChat.conversation.Users[reply.UserId].ProfileImageUrl}}"/>
+                                        <img class="img-sm img-circle margin-r-5" ng-src="{{Chat.activeChat.conversation.Users[reply.UserId].ProfileImageUrl}}" />
                                         <span>{{Chat.activeChat.conversation.Users[reply.UserId].Name}}</span>
                                     </a>
                                     <div class="reply-text">
@@ -175,7 +175,7 @@
                                     </div>
                                     <div class="reply-status" ng-if="reply.ReplyStatus != 0">
                                         <span ng-switch on="reply.ReplyStatus">
-                                            <span ng-switch-when="1" class="sent">
+                                            <span ng-switch-when="2" class="received">
                                                 <i class="fa fa-check"></i>
                                             </span>
                                             <span ng-switch-when="3" class="read">
@@ -193,7 +193,7 @@
                     <div class="submission-area col-xs-12 col-md-12">
                         <form method="post">
                             <div class="input-group input-group-sm">
-                                <input class="form-control" id="chat-input" ng-model="Chat.activeChat.replyText" placeholder="start typing your message..." />
+                                <input class="form-control" id="chat-input" ng-model="Chat.activeChat.replyText" autocomplete="off" placeholder="start typing your message..." />
                                 <span class="input-group-btn">
                                     <button type="submit" ng-click="Chat.sendReply()" class="btn btn-secondary btn-flat">Send</button>
                                 </span>
@@ -205,7 +205,7 @@
         </div>
     </div>
     <div class="chat-switcher">
-        <a id="switch-link" ng-click="Chat.loadOnlineFriends()">Online</a>
+        <a id="switch-link" ng-click="Chat.loadOnlineFriends()">Online <span ng-if="(Chat.getTotalUnreadCount() || Chat.globalUnreadCount) > 0">{{Chat.getTotalUnreadCount() || Chat.globalUnreadCount || ''}}</span></a>
         <script type="text/javascript">
             jQuery("#switch-link")
                 .click(function (e) {
