--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -302,6 +302,13 @@ videogular vg-overlay-play, [videogular] vg-overlay-play {
     color: #555; }
     .chat-area .chat-switcher a:hover, .chat-area .chat-switcher a:active {
       color: #555; }
+    .chat-area .chat-switcher a span {
+      background-color: maroon;
+      color: white;
+      margin: 5px;
+      padding: 2px 6px;
+      font-size: 11px;
+      border-radius: 50%; }
   .chat-area .chat-box {
     display: none;
     position: absolute;
@@ -329,7 +336,7 @@ videogular vg-overlay-play, [videogular] vg-overlay-play {
       width: 75%;
       height: 400px; }
     .chat-area .chat-box .chat-scroll .conversation {
-      height: 360px;
+      height: 342px;
       overflow: auto;
       padding: 10px 0; }
       .chat-area .chat-box .chat-scroll .conversation ul {
