Admin pages and functionality for skill api implemented

--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-administration.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-administration.html
@@ -380,6 +380,9 @@
                     </li>
                 </ul>
             </li>
+            <li ng-class='{"active": $state.includes("layoutAdministration.skills.list")}'>
+                <a ui-sref="layoutAdministration.skills.list"><i class="fa fa-circle-o"></i> Skills</a>
+            </li>
             <li class="treeview">
                 <a href="#">
                     <i class="fa fa-file-picture-o"></i> <span>Media</span>
