Included support for Like, Follow and comment and pagination in skils api

--- a/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
+++ b/Presentation/mobSocial.WebApp/themes/admin/AdminLTE/css/overrides.css
@@ -399,3 +399,12 @@ videogular vg-overlay-play, [videogular] vg-overlay-play {
     left: 45%;
     color: white; }
 
+.load-more {
+  text-align: center;
+  border: dashed 1px #999;
+  padding: 5px 0;
+  margin: 15px;
+  background-color: white; }
+  .load-more a {
+    color: #555; }
+
