--- a/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
+++ b/Presentation/mobSocial.WebApp/pages/layouts/_layout-mobsocial.html
@@ -113,7 +113,7 @@
                                         <a href="#">Followers</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
-                                        <a href="#">Sales</a>
+                                        <a ui-sref="layoutApplication.twoColumns.listApplications">My Apps</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
                                         <a href="#">Friends</a>
