--- a/Presentation/mobSocial.WebApi/Views/OAuth/Authorize.cshtml
+++ b/Presentation/mobSocial.WebApi/Views/OAuth/Authorize.cshtml
@@ -1,48 +1,55 @@
-﻿@model mobSocial.WebApi.Models.Applications.ApplicationAuthorizeModel
+﻿@using mobSocial.WebApi.Configuration.Infrastructure
+@model mobSocial.WebApi.Models.Applications.ApplicationAuthorizeModel
 @{
+    Layout = "../Layout.cshtml";
     ViewBag.Title = "Authorize";
+    var currentUser = ApplicationContext.Current.CurrentUser;
 }
-@if (!Model.AlreadyAuthorized)
-{
-    <h3 class="no-padding no-margin">@Model.ApplicationName is requesting access to your account.</h3>
-    <p>The application would like to:</p>
-    <ul>
-        @foreach (var modelScope in Model.Scopes)
-        {
-            <li>
-                <p>@modelScope.Description</p>
-            </li>
-        }
-    </ul>
-    <p>The application <strong class="text-danger">will not</strong> be able to:
-    </p>
-    <ul>
-        <li>View your password</li>
-    </ul>
-}
-else
-{
-    <h4 class="no-padding no-margin">Redirecting back to @Model.ApplicationName ...</h4>
-}
-<form method="post" id="authForm">
-    @if (!Model.AlreadyAuthorized)
-    {
-        <div class="text-center">
-            <input type="submit" value="Allow" class="btn btn-primary"/>
-            <a class="btn btn-default" href="@(Model.RedirectUrl)?error=access_denied">Deny</a>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+            <fieldset block-ui>
+                <div class="box no-border" style="margin-top: 30px">
+                    <div class="box-header text-center">
+                        <div class="box-title">
+                            <b>mob</b>Social
+                        </div>
+                    </div>
+
+                    <div id="authorize-page" class="box-body" style="padding: 0 30px 30px;">
+
+                        <h3 class="no-padding no-margin">@Model.ApplicationName is requesting access to your account.</h3>
+                        <p>The application would like to:</p>
+                        <ul>
+                            @foreach (var modelScope in Model.Scopes)
+                            {
+                                <li>
+                                    <p>@modelScope.Description</p>
+                                </li>
+                            }
+                        </ul>
+                        <p>
+                            The application <strong class="text-danger">will not</strong> be able to:
+                        </p>
+                        <ul>
+                            <li>View your password</li>
+                        </ul>
+                        <form method="post" id="authForm">
+                            <div class="text-center">
+                                You are logged in as : @currentUser.Name
+                                <div>
+                                    <input type="submit" value="Allow" class="btn btn-primary"/>
+                                    <a class="btn btn-default" href="@(Model.RedirectUrl)?error=access_denied">Deny</a>
+                                </div>
+                               
+                            </div>
+
+                        </form>
+                    </div>
+
+                </div>
+            </fieldset>
         </div>
-    }
-    
-    <script type="text/javascript">
-        jQuery(document).ready(function() {
-            var url = "/api/oauth2/authorize" + window.location.search;
-            jQuery("#authForm").attr("action", url);
-            @if (Model.AlreadyAuthorized)
-            {
-                <text>
-                    jQuery("#authForm").submit();
-                </text>
-            }
-        });
-    </script>
-</form>
+    </div>
+</div>
+
