--- a/Presentation/mobSocial.WebApp/pages/components/customFieldEditor.html
+++ b/Presentation/mobSocial.WebApp/pages/components/customFieldEditor.html
@@ -1,9 +1,9 @@
-﻿<div class="extra-field-editor">
+﻿<div class="custom-field-editor">
     <fieldset>
         <div class="form-group row">
-            <label for="fieldType" class="col-md-3 control-label">{{ "Field Type"}}</label>
+            <label for="customFieldType" class="col-md-3 control-label">{{ "Field Type"}}</label>
             <div class="col-md-9">
-                <select id="fieldType" class="form-control" ng-model="customField.FieldType">
+                <select id="customFieldType" class="form-control" ng-model="customField.FieldType">
                     <option ng-repeat="x in fieldTypes track by x.Id" value="{{x.Id}}">{{x.Text}}</option>
                 </select>
             </div>
@@ -21,27 +21,24 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="labelBackOffice" class="col-md-3 control-label">{{"Label"}}</label>
+            <label for="label" class="col-md-3 control-label">{{"Label"}}</label>
             <div class="col-md-9">
-                <input type="text" class="form-control" id="labelBackOffice" ng-model="customField.Label">
+                <input type="text" class="form-control" id="label" ng-model="customField.Label">
            </div>
         </div>
         <div class="form-group row">
-            <div class="col-md-6">
-                <label for="visible" class="control-label">
-                    <input icheck type="checkbox" class="form-control" id="visible" ng-model="customField.Visible">
-                    {{"Visible"}}
-                </label>
+            <label for="label" class="col-md-3 control-label">{{"Visible"}}</label>
+            <div class="col-md-9">
+                <input icheck type="checkbox" class="form-control" id="visible" ng-model="customField.Visible">
             </div>
-           
+
         </div>
 
         <div class="form-group row">
-            <div class="col-md-6">
-                <label for="required" class="control-label">
-                    <input icheck type="checkbox" class="form-control" id="required" ng-model="customField.Required">
-                    {{"Required"}}
-                </label>
+            <label for="label" class="col-md-3 control-label">{{"Required"}}</label>
+            <div class="col-md-9">
+                <input icheck type="checkbox" class="form-control" id="required" ng-model="customField.Required">
+
             </div>
         </div>
         <h5 ng-if="['8', '10', '13', '14', '4', '9'].indexOf(customField.FieldType) > -1">{{"Values"}}</h5>
