external user registration with custom fields support added

--- a/Presentation/mobSocial.WebApp/pages/components/customFieldEditor.html
+++ b/Presentation/mobSocial.WebApp/pages/components/customFieldEditor.html
@@ -24,7 +24,13 @@
             <label for="label" class="col-md-3 control-label">{{"Label"}}</label>
             <div class="col-md-9">
                 <input type="text" class="form-control" id="label" ng-model="customField.Label">
-           </div>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="systemName" class="col-md-3 control-label">{{"System Name"}}</label>
+            <div class="col-md-9">
+                <input type="text" class="form-control" id="systemName" ng-model="customField.SystemName">
+            </div>
         </div>
         <div class="form-group row">
             <label for="label" class="col-md-3 control-label">{{"Visible"}}</label>
